Fixed Visual Bug on mobile

--- a/app.css
+++ b/app.css
@@ -34,10 +34,9 @@ main{
 main div.box{
   display: flex;
   flex-direction: column;
-  flex: 1;
+  flex: .9;
   font-size: 15px;
   justify-content: center;
-  max-width: 500px;
   border: white solid 4px;
   border-radius: 10px;
   padding: 20px;
@@ -94,5 +93,6 @@ footer{
 
   main div{
     font-size: 20px;
+    max-width: 500px;
   }
 }
